downgrade byte reader to java 8